<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.santiago.holamundo.Colores">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btn_red"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/Red"
            android:textSize="50dp" />

        <TextView
            android:width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Red"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="40dp"/>

    </TableRow>



    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/Blue"
            android:textSize="50dp" />

        <TextView
            android:width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Blue"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="40dp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_green"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/Green"
            android:textSize="50dp" />

        <TextView
            android:width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Green"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="40dp"/>

    </TableRow>



</TableLayout>
